Switch to new windows build image.

--- a/.github/opam/liquidsoap-core-windows.opam
+++ b/.github/opam/liquidsoap-core-windows.opam
@@ -30,6 +30,9 @@ depends: [
   "magic-mime-windows"
   "menhir"
   "menhirLib-windows"
+  "uri"
+  "uri-windows"
+  "ocurl-windows"
   "mem_usage-windows" {>= "0.1.1"}
   "metadata-windows" {>= "0.3.0"}
   "dune-site-windows"
