--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -482,14 +482,14 @@ jobs:
           path: ${{ github.workspace }}/${{ github.run_number }}/s3-artifacts
 
   build_win32:
-    runs-on: ubuntu-latest
+    runs-on: depot-ubuntu-22.04-4
     needs: build_details
     strategy:
       fail-fast: false
       matrix:
         system: [x64]
     container:
-      image: savonet/liquidsoap-win32-deps-${{ matrix.system }}
+      image: savonet/liquidsoap-win32-${{ matrix.system }}
       options: --user root -v ${{ github.workspace }}/${{ github.run_number }}:/tmp/${{ github.run_number }}
     env:
       OPAM_DEPS: ao-windows,lastfm-windows,camomile-windows,cry-windows,dtools-windows,duppy-windows,ffmpeg-windows,ffmpeg-avutil-windows,mm-windows,re-windows,portaudio-windows,samplerate-windows,sedlex-windows,ssl-windows,srt-windows,winsvc-windows,mem_usage-windows
