--- a/.github/opam/liquidsoap-core-windows.opam
+++ b/.github/opam/liquidsoap-core-windows.opam
@@ -32,7 +32,7 @@ depends: [
   "menhirLib-windows"
   "uri"
   "uri-windows"
-  "ocurl-windows"
+  "curl-windows"
   "mem_usage-windows" {>= "0.1.1"}
   "metadata-windows" {>= "0.3.0"}
   "dune-site-windows"
