--- a/.github/opam/liquidsoap-core-windows.opam
+++ b/.github/opam/liquidsoap-core-windows.opam
@@ -128,7 +128,7 @@ build: [
     "LIQUIDSOAP_BUILD_TARGET=standalone"
     "LIQUIDSOAP_SYS_CONFIG=mingw"
     "LIQUIDSOAP_ENABLE_BUILD_CONFIG=false"
-    "LDFLAGS=-lssp -lfdk-aac -lcurl -lldap"
+    "LDFLAGS=-lssp -lfdk-aac -lcurl -lwldap32"
     "dune"
     "build"
     "-x"
