--- a/.github/opam/liquidsoap-core-windows.opam
+++ b/.github/opam/liquidsoap-core-windows.opam
@@ -128,7 +128,7 @@ build: [
     "LIQUIDSOAP_BUILD_TARGET=standalone"
     "LIQUIDSOAP_SYS_CONFIG=mingw"
     "LIQUIDSOAP_ENABLE_BUILD_CONFIG=false"
-    "LDFLAGS=-lssp -lfdk-aac -lcurl -lwldap32 -ldl -lnghttp2 -lpsl -lssh2 -lavutil"
+    "LIQ_LDFLAGS=-lcurl -lwldap32 -ldl -lnghttp2 -lpsl -lssh2 -lidn2 -lzstd -lunistring -lbrotlicommon -lbrotlidec -lcrypt32 -liconv -lpthread -lz -lbcrypt -lwinmm -lksuser -link /usr/src/mxe/usr/x86_64-w64-mingw32.static/lib/libavutil.a"
     "dune"
     "build"
     "-x"
