Switch to new windows build image. (#4234)

--- a/.github/opam/liquidsoap-core-windows.opam
+++ b/.github/opam/liquidsoap-core-windows.opam
@@ -30,6 +30,11 @@ depends: [
   "magic-mime-windows"
   "menhir"
   "menhirLib-windows"
+  "uri"
+  "uri-windows"
+  "fileutils"
+  "fileutils-windows"
+  "curl-windows"
   "mem_usage-windows" {>= "0.1.1"}
   "metadata-windows" {>= "0.3.0"}
   "dune-site-windows"
@@ -123,7 +128,7 @@ build: [
     "LIQUIDSOAP_BUILD_TARGET=standalone"
     "LIQUIDSOAP_SYS_CONFIG=mingw"
     "LIQUIDSOAP_ENABLE_BUILD_CONFIG=false"
-    "LDFLAGS=-lssp -lfdk-aac"
+    "LIQ_LDFLAGS=-lcurl -lwldap32 -ldl -lnghttp2 -lpsl -lssh2 -lidn2 -lzstd -lunistring -lbrotlicommon -lbrotlidec -lcrypt32 -liconv -lpthread -lz -lbcrypt -lwinmm -lksuser -link /usr/src/mxe/usr/x86_64-w64-mingw32.static/lib/libavutil.a"
     "dune"
     "build"
     "-x"
