Add support for native xml parsing.

--- a/liquidsoap-lang.opam
+++ b/liquidsoap-lang.opam
@@ -17,6 +17,7 @@ depends: [
   "ppx_hash" {build}
   "sedlex" {>= "3.2"}
   "menhir" {>= "20240715"}
+  "xml-light"
   "odoc" {with-doc}
 ]
 build: [
