--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,7 +85,7 @@ jobs:
           cp PACKAGES.minimal PACKAGES
           opam update
           opam pin -yn .
-          opam install -y saturn_lockfree.0.4.1 ppx_hash
+          opam install -y saturn_lockfree.0.5.0 ppx_hash
           opam info -f "depopts:" liquidsoap-core | grep -v osx-secure-transport | xargs opam remove -y inotify ffmpeg-avutil cohttp-lwt-unix prometheus-app ${{ needs.build_details.outputs.minimal_exclude_deps }}
           opam install -y mem_usage
           echo "::endgroup::"
@@ -121,7 +121,7 @@ jobs:
           cd /tmp/liquidsoap-full/liquidsoap
           eval "$(opam config env)"
           opam update
-          opam install -y xml-light
+          opam install -y xml-light saturn_lockfree.0.5.0
           dune build --profile release ./src/js/interactive_js.bc.js
 
   tree_sitter_parse:
