--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
       - v[0-9]+.[0-9]+.[0-9]+
       - v[0-9]+.[0-9]+.[0-9]+-*
     paths:
-      - ".github/workflows/ci.yml"
+      - ".github/**"
       - "**/*.ml"
       - "**/*.liq"
       - "**/dune"
