Bind directly using posix sockets.

--- a/liquidsoap-core.opam
+++ b/liquidsoap-core.opam
@@ -57,6 +57,7 @@ depopts: [
   "osc-unix"
   "portaudio"
   "posix-time2"
+  "posix-socket"
   "pulseaudio"
   "prometheus-liquidsoap"
   "samplerate"
@@ -95,6 +96,7 @@ conflicts: [
   "opus" {< "0.2.0"}
   "portaudio" {< "0.2.0"}
   "posix-time2" {< "2.0.2"}
+  "posix-socket" {>= "2.1.0"}
   "pulseaudio" {< "0.1.4"}
   "samplerate" {< "0.1.5"}
   "shine" {< "0.2.0"}
