--- a/.github/opam/liquidsoap-core-windows.opam
+++ b/.github/opam/liquidsoap-core-windows.opam
@@ -73,6 +73,7 @@ depopts: [
   "osx-secure-transport-windows"
   "portaudio-windows"
   "posix-time2-windows"
+  "posix-socket-windows"
   "pulseaudio-windows"
   "prometheus-liquidsoap-windows"
   "samplerate-windows"
@@ -111,6 +112,7 @@ conflicts: [
   "ogg-windows" {< "0.7.4"}
   "opus-windows" {< "0.2.0"}
   "portaudio-windows" {< "0.2.0"}
+  "posix-socket" {< "2.1.0"}
   "pulseaudio-windows" {< "0.1.4"}
   "samplerate-windows" {< "0.1.5"}
   "shine-windows" {< "0.2.0"}
