--- a/liquidsoap-core.opam
+++ b/liquidsoap-core.opam
@@ -57,6 +57,7 @@ depopts: [
   "osc-unix"
   "portaudio"
   "posix-time2"
+  "posix-socket"
   "pulseaudio"
   "prometheus-liquidsoap"
   "samplerate"
@@ -95,12 +96,13 @@ conflicts: [
   "opus" {< "0.2.0"}
   "portaudio" {< "0.2.0"}
   "posix-time2" {< "2.0.2"}
+  "posix-socket" {< "2.1.0"}
   "pulseaudio" {< "0.1.4"}
   "samplerate" {< "0.1.5"}
   "shine" {< "0.2.0"}
   "soundtouch" {< "0.1.9"}
   "speex" {< "1.0.0"}
-  "srt" {< "0.3.0"}
+  "srt" {< "0.3.2"}
   "ssl" {< "0.7.0"}
   "tls" {< "1.0.2"}
   "sdl-liquidsoap" {< "2"}
