--- a/liquidsoap.opam
+++ b/liquidsoap.opam
@@ -17,12 +17,108 @@ homepage: "https://github.com/savonet/liquidsoap"
 bug-reports: "https://github.com/savonet/liquidsoap/issues"
 depends: [
   "dune" {>= "3.6"}
-  "liquidsoap-core" {= version}
-  "liquidsoap-libs" {>= "2.3.1" & < "2.3.2"}
-  "liquidsoap-libs-extra" {>= "2.3.1" & < "2.3.2"}
+  "ocaml" {>= "4.14"}
+  "dtools" {>= "0.4.5"}
+  "duppy" {>= "0.9.4"}
+  "mm" {>= "0.8.6"}
+  "re" {>= "1.11.0"}
+  "ocurl" {>= "0.9.2"}
+  "cry" {>= "1.0.3"}
+  "camomile" {>= "2.0.0"}
+  "uri"
+  "fileutils"
+  "menhirLib"
+  "mem_usage" {>= "0.1.1"}
+  "metadata" {>= "0.3.0"}
+  "magic-mime"
+  "dune-build-info"
+  "liquidsoap-lang" {= version}
+  "ppx_string" {build}
+  "odoc" {with-doc}
+]
+depopts: [
+  "alsa"
+  "ao"
+  "bjack"
+  "camlimages"
+  "ctypes-foreign"
+  "dssi"
+  "faad"
+  "fdkaac"
+  "ffmpeg"
+  "flac"
+  "frei0r"
+  "gd"
+  "graphics"
+  "imagelib"
+  "inotify"
+  "irc-client-unix"
+  "jemalloc"
+  "ladspa"
+  "lame"
+  "lilv"
+  "lo"
+  "mad"
+  "memtrace"
+  "ogg"
+  "opus"
+  "osc-unix"
+  "portaudio"
+  "posix-time2"
+  "posix-socket"
+  "pulseaudio"
+  "prometheus-liquidsoap"
+  "samplerate"
+  "shine"
+  "soundtouch"
+  "speex"
+  "sqlite3"
+  "srt"
+  "ssl"
+  "tls-liquidsoap"
+  "theora"
+  "sdl-liquidsoap"
+  "vorbis"
+  "yaml"
+  "xmlplaylist"
+]
+conflicts: [
+  "alsa" {< "0.3.0"}
+  "ao" {< "0.2.0"}
+  "bjack" {< "0.1.3"}
+  "camomile" {< "1.0.0"}
+  "dssi" {< "0.1.3"}
+  "faad" {< "0.5.0"}
+  "fdkaac" {< "0.3.1"}
+  "ffmpeg" {< "1.2.0"}
+  "ffmpeg-avutil" {< "1.2.0"}
+  "flac" {< "1.0.0"}
+  "frei0r" {< "0.1.0"}
+  "inotify" {< "1.0"}
+  "ladspa" {< "0.2.0"}
+  "lame" {< "0.3.7"}
+  "lo" {< "0.2.0"}
+  "mad" {< "0.5.0"}
+  "magic" {< "0.6"}
+  "ogg" {< "1.0.0"}
+  "opus" {< "0.2.0"}
+  "portaudio" {< "0.2.0"}
+  "posix-time2" {< "2.0.2"}
+  "posix-socket" {< "2.1.0"}
+  "pulseaudio" {< "0.1.4"}
+  "samplerate" {< "0.1.5"}
+  "shine" {< "0.2.0"}
+  "soundtouch" {< "0.1.9"}
+  "speex" {< "1.0.0"}
+  "srt" {< "0.3.2"}
+  "ssl" {< "0.7.0"}
+  "tls" {< "1.0.2"}
+  "sdl-liquidsoap" {< "2"}
+  "theora" {< "1.0.0"}
+  "vorbis" {< "1.0.0"}
+  "xmlplaylist" {< "0.1.3"}
   "pandoc" {with-doc}
   "pandoc-include" {with-doc}
-  "odoc" {with-doc}
 ]
 build: [
   ["dune" "subst"] {dev}
